Added a method to Parser that returns the set of variables that are valid in the current block